@@ -17464,6 +17464,8 @@ logfile cache:</p></div>
 
 <div class='toclevel4'><a href='#_perf_bar_mode'>perf_bar_mode</a></div>
 
+<div class='toclevel4'><a href='#_perf_bar_pnp_popup_1'>perf_bar_pnp_popup = 1</a></div>
+
 <div class='toclevel4'><a href='#_shown_inline_pnp'>shown_inline_pnp</a></div>
 
 <div class='toclevel4'><a href='#_show_custom_vars'>show_custom_vars</a></div>
@@ -18236,6 +18238,14 @@ off: graph no value at all</tt></pre>
 <div class="literalblock">
 <div class="content">
 <pre><tt>perf_bar_mode = match</tt></pre>
+</div></div>
+<h4 id="_perf_bar_pnp_popup_1">perf_bar_pnp_popup = 1</h4>
+<div class="paragraph"><p>Show pnp popup if performance data are available and
+pnp is used as graph engine.</p></div>
+<div class="paragraph"><p>ex.:</p></div>
+<div class="literalblock">
+<div class="content">
+<pre><tt>perf_bar_pnp_popup = 1</tt></pre>
 </div></div>
 <h4 id="_shown_inline_pnp">shown_inline_pnp</h4>
 <div class="paragraph"><p>Show inline pnp graph if available. If a service or host has a
@@ -19638,7 +19648,7 @@ of your monitoring core configuration.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-03-11 17:39:47 CEST
+Last updated 2013-03-12 16:13:41 CEST
 </div>
 </div>
 </body>
