@@ -1044,7 +1044,11 @@ function perf_table(write, state, plugin_output, perfdata, check_command, pnp_ur
     if(write) {
         if(result != '' && pnp_url != '') {
             var rel_url = pnp_url.replace('\/graph\?', '/popup?');
-            document.write("<a href='"+pnp_url+"' class='tips' rel='"+rel_url+"'>");
+            if(perf_bar_pnp_popup == 1) {
+                document.write("<a href='"+pnp_url+"' class='tips' rel='"+rel_url+"'>");
+            } else {
+                document.write("<a href='"+pnp_url+"'>");
+            }
         }
         document.write(result);
         if(result != '' && pnp_url != '') {
