@@ -65,14 +65,11 @@
     }
     [%+ IF c.config.precompile_templates +%]
     jQuery(document).ready(function() {
-      // init up to 8 threads
-      for(x=0;x<8;x++) {
         jQuery.ajax({
-            url: '[% url_prefix %]thruk/cgi-bin/remote.cgi?compile&x='+x,
+            url: '[% url_prefix %]thruk/cgi-bin/remote.cgi?compile',
             type: 'GET',
             success: function() {}
         });
-      }
     });
   [%+ END +%]
   -->
