@@ -250,6 +250,10 @@ show_full_commandline_source = check_command
 # options are 'match', 'first', 'all', 'worst' and 'off'.
 perf_bar_mode = match
 
+# show pnp popup if performance data are available and
+# pnp is used as graph engine.
+perf_bar_pnp_popup = 1
+
 # show inline pnp graph if available
 # if a service or host has a pnp4nagios action url set
 # thruk will show a inline graph on the extinfo page
