@@ -7,6 +7,7 @@ next:
             - made indention and sort order configurable
           - added optional server side js error logging
           - added 'compile' cli command to precompile templates
+          - added 'perf_bar_pnp_popup' option to control pnp popups in perfbar
           - panorama view:
             - auto adjust minemap column height
             - use escape_html setting from cgi.cfg
